WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
312808
REGRESSION(
311577@main
): [GStreamer] imported/w3c/web-platform-tests/webrtc/RTCPeerConnection-addTcpIceCandidate.html crashes
https://bugs.webkit.org/show_bug.cgi?id=312808
Summary
REGRESSION(311577@main): [GStreamer] imported/w3c/web-platform-tests/webrtc/R...
Philippe Normand
Reported
2026-04-20 13:38:14 PDT
The socket arg in the rice_tcp_connect callback can be nullptr.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2026-04-20 13:41:21 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/63150
Philippe Normand
Comment 2
2026-04-21 02:08:35 PDT
***
Bug 312817
has been marked as a duplicate of this bug. ***
EWS
Comment 3
2026-04-21 02:50:37 PDT
Committed
311666@main
(a7759f50432c): <
https://commits.webkit.org/311666@main
> Reviewed commits have been landed. Closing PR #63150 and removing active labels.
Radar WebKit Bug Importer
Comment 4
2026-04-21 02:51:12 PDT
<
rdar://problem/175236786
>
Philippe Normand
Comment 5
2026-04-21 04:48:05 PDT
***
Bug 312879
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug