REGRESSION(311577@main): [GStreamer] imported/w3c/web-platform-tests/webrtc/RTCPeerConnection-addTcpIceCandidate.html crashes https://bugs.webkit.org/show_bug.cgi?id=312808

Reviewed by Xabier Rodriguez-Calvar.

When TCP connection fails the RiceTcpSocket passed from the rice_tcp_connect callback is nullptr, so
we should check for that case. Passing by, allow conversion of SocketAllocationData to GUniquePtr
for improved RAII.

* Source/WebKit/NetworkProcess/webrtc/rice/RiceBackend.cpp:
(WebKit::RiceBackend::allocateSocket):

Canonical link: https://commits.webkit.org/311666@main